# HWR

./: .gitignore  .gitlab-ci.yml  Makefile  OCR_train.py  README.md  TZ_Razmetka.docx  align.py  main.py  pyproject.toml  train.sh
OCR_train_pipeline/: OCR_train.py  pl_models.py  train.sh
api/: .dockerignore  Dockerfile  Makefile  README.md  gunicorn.config.py  image_test.py  main.py  pyproject.toml  setup.cfg
api/service/: log.py  response.py  settings.py
api/service/api/: app.py  exception_handlers.py  exceptions.py  middlewares.py  token.py
api/service/api/config/: utils_config.yml
api/service/api/models/: __init__.py
api/service/api/utils/: __init__.py  align.py  result_to_json.py  shape_correction.py
api/service/api/views/: __init__.py  root.py
api/tests/api/: test_views.py
clearmltools/dataset/: __init__.py
config/: form_map.yml  utils_config.yml
data/: Form07.json
train_utils/: callbacks.py  models.py  pl_models.py
utils/: align.py  cut_cells.py  result_to_json.py  shape_correction.py
