[tool.poetry]
name = "hwr-numbers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "clearmltools"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
torch = "2.0"
clearml = "^1.9.1"
boto3 = "^1.26.79"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.0"
torchsummary = "^1.5.1"
tensorboard = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
