[tool.poetry]
name = "shifo-ocr"
version = "0.1.0"
description = "API for interracting with ml server"
authors = ["Владислав Гмырь <gmyr@sputnikfund.ru>"]
readme = "README.md"
packages = [{include = "service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
uvloop = "^0.17.0"
uvicorn = "^0.20.0"
orjson = "^3.8.5"
starlette = "^0.22.0"
jose = "^1.0.0"
gunicorn = "^20.1.0"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
clearml = "^1.10.3"
torch = "^2.0.0"
boto3 = "^1.26.109"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
requests = "^2.28.2"
mypy = "^0.991"
isort = "^5.11.4"
bandit = "^1.7.4"
flake8 = "^6.0.0"
pylint = "^2.15.10"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
